tests/indexed-types/should_compile/ClassEqContext.hs
{-# LANGUAGE TypeFamilies, MultiParamTypeClasses #-}

module ClassEqContext  where 

class a ~ b => C a b
