tests/indexed-types/should_fail/T19773a.hs
{-# LANGUAGE TypeFamilies #-}
module T19773a where

data family DF a
